@@ -20,15 +20,19 @@
 
 package cascading.flow.hive;
 
+import java.io.IOException;
 import java.util.Collection;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Properties;
 
+import cascading.CascadingException;
 import cascading.flow.FlowDescriptors;
 import cascading.flow.hadoop.ProcessFlow;
 import cascading.tap.Tap;
 import cascading.tap.hive.HiveNullTap;
+import cascading.tap.hive.HivePartitionTap;
+import cascading.tap.hive.HiveTap;
 import org.apache.commons.lang.StringUtils;
 
 /**
@@ -128,4 +132,31 @@ public class HiveFlow extends ProcessFlow
     return flowDescriptor;
     }
 
+  @Override
+  public void start()
+    {
+    registerSinkTable();
+    super.start();
+    }
+
+  @Override
+  public void complete()
+    {
+    registerSinkTable();
+    super.complete();
+    }
+
+  private void registerSinkTable()
+    {
+    try
+      {
+      Tap sink = getSink();
+      if ( sink instanceof HiveTap || sink instanceof HivePartitionTap )
+        sink.createResource( getFlowProcess() );
+      }
+    catch( IOException exception )
+      {
+      throw new CascadingException( exception );
+      }
+    }
   }
