@@ -2,5 +2,6 @@ Cascading-Hive changelog
 
 1.1 (unreleased)
 
+- c.f.h.HiveRiffle supports async start method
 - update to Cascading 2.7
 - c.f.h.HiveRiffle is no longer public
